--- a/KuranX.App/Core/Pages/SubjectF/SubjectItem.xaml
+++ b/KuranX.App/Core/Pages/SubjectF/SubjectItem.xaml
@@ -19,91 +19,6 @@
 
         <!-- Popup -->
 
-        <Popup x:Name="alph" IsOpen="False" Placement="Center" AllowsTransparency="True" Width="460" Height="200" VerticalAlignment="Center" HorizontalAlignment="Center" PopupAnimation="Fade">
-            <Border  Style="{DynamicResource defaultBorderShadowEffect}" Width="440" Height="180">
-                <Grid>
-                    <Grid.RowDefinitions>
-                        <RowDefinition Height="*" />
-                    </Grid.RowDefinitions>
-
-                    <Grid Grid.Row="1">
-                        <Grid.ColumnDefinitions>
-                            <ColumnDefinition Width="10" />
-                            <ColumnDefinition Width="90" />
-                            <ColumnDefinition Width="*" />
-                        </Grid.ColumnDefinitions>
-                        <Border Grid.Column="0" Background="#F0433A" CornerRadius="5 0 0 5"></Border>
-                        <StackPanel Grid.Column="1" VerticalAlignment="Center" HorizontalAlignment="Center">
-                            <Icon:PackIconOcticons Kind="Alert" Width="48" Height="48" Foreground="#F0433A" />
-                        </StackPanel>
-                        <Border Grid.Column="2"  Padding="10 0 10 0">
-                            <StackPanel Orientation="Vertical" HorizontalAlignment="Left" VerticalAlignment="Center">
-                                <TextBlock x:Name="alertPopupHeader" Text="" TextAlignment="Center" FontSize="22" Margin="0,0,0,12" Foreground="#1C1E2F" FontFamily="{DynamicResource PoppinsSemiBold}" />
-                                <TextBlock x:Name="alertPopupDetail" Text="" TextAlignment="Center" TextWrapping="Wrap"  Foreground="#1C1E2F" FontFamily="{DynamicResource PoppinsMedium}" />
-                            </StackPanel>
-                        </Border>
-                    </Grid>
-                </Grid>
-            </Border>
-        </Popup>
-
-        <Popup x:Name="inph" IsOpen="False" Placement="Center" AllowsTransparency="True" Width="460" Height="200" VerticalAlignment="Center" HorizontalAlignment="Center" PopupAnimation="Fade">
-
-            <Border Style="{DynamicResource defaultBorderShadowEffect}" Width="440" Height="180">
-                <Grid>
-                    <Grid.RowDefinitions>
-                        <RowDefinition Height="*" />
-                    </Grid.RowDefinitions>
-
-                    <Grid Grid.Row="1">
-                        <Grid.ColumnDefinitions>
-                            <ColumnDefinition Width="10" />
-                            <ColumnDefinition Width="90" />
-                            <ColumnDefinition Width="*" />
-                        </Grid.ColumnDefinitions>
-                        <Border Grid.Column="0" Background="#0D6EFD" CornerRadius="5 0 0 5"></Border>
-                        <StackPanel Grid.Column="1" VerticalAlignment="Center" HorizontalAlignment="Center">
-                            <Icon:PackIconUnicons Kind="Info" Width="48" Height="48" Foreground="#0D6EFD" />
-                        </StackPanel>
-                        <Border Grid.Column="2"  Padding="10 0 10 0">
-                            <StackPanel Orientation="Vertical" HorizontalAlignment="Left" VerticalAlignment="Center">
-                                <TextBlock x:Name="infoPopupHeader" Text="" TextAlignment="Center" FontSize="22" Margin="0,0,0,12" Foreground="#1C1E2F" FontFamily="{DynamicResource PoppinsSemiBold}" />
-                                <TextBlock x:Name="infoPopupDetail" Text="" TextAlignment="Center" TextWrapping="Wrap"  Foreground="#1C1E2F" FontFamily="{DynamicResource PoppinsMedium}" />
-                            </StackPanel>
-                        </Border>
-                    </Grid>
-                </Grid>
-            </Border>
-        </Popup>
-
-        <Popup x:Name="scph" IsOpen="False" Placement="Center" AllowsTransparency="True" Width="460" Height="200" VerticalAlignment="Center" HorizontalAlignment="Center" PopupAnimation="Fade">
-            <Border Style="{DynamicResource defaultBorderShadowEffect}" Width="440" Height="180">
-                <Grid>
-                    <Grid.RowDefinitions>
-                        <RowDefinition Height="*" />
-                    </Grid.RowDefinitions>
-
-                    <Grid Grid.Row="1">
-                        <Grid.ColumnDefinitions>
-                            <ColumnDefinition Width="10" />
-                            <ColumnDefinition Width="90" />
-                            <ColumnDefinition Width="*" />
-                        </Grid.ColumnDefinitions>
-                        <Border Grid.Column="0" Background="#66E21F" CornerRadius="5 0 0 5"></Border>
-                        <StackPanel Grid.Column="1" VerticalAlignment="Center" HorizontalAlignment="Center">
-                            <Icon:PackIconIonicons Kind="CheckmarkMD" Width="48" Height="48" Foreground="#66E21F" />
-                        </StackPanel>
-                        <Border Grid.Column="2"  Padding="10 0 10 0">
-                            <StackPanel Orientation="Vertical" HorizontalAlignment="Left" VerticalAlignment="Center">
-                                <TextBlock x:Name="successPopupHeader" Text="" TextAlignment="Center" FontSize="22" Margin="0,0,0,12" Foreground="#1C1E2F" FontFamily="{DynamicResource PoppinsSemiBold}" />
-                                <TextBlock x:Name="successPopupDetail" Text="" TextAlignment="Center" TextWrapping="Wrap"  Foreground="#1C1E2F" FontFamily="{DynamicResource PoppinsMedium}" />
-                            </StackPanel>
-                        </Border>
-                    </Grid>
-                </Grid>
-            </Border>
-        </Popup>
-
         <!-- Note  -->
 
         <Popup x:Name="popup_Note" IsOpen="False" Placement="Center" AllowsTransparency="True" Width="500" Height="350" VerticalAlignment="Center" HorizontalAlignment="Center" PopupAnimation="Fade">
@@ -132,61 +47,13 @@
                                 <RowDefinition Height="*" />
                             </Grid.RowDefinitions>
 
-                            <ItemsControl  Grid.Row="0" Grid.Column="0" x:Name="nd1">
-                                <ItemsControl.ItemTemplate>
-                                    <DataTemplate>
-                                        <Button Style="{DynamicResource pp_ConnectItemsBts}" Content="{Binding NoteHeader}" Uid="{Binding NotesId}" Tag="ArrowRight" Click="noteDetailPopup_Click" />
-                                    </DataTemplate>
-                                </ItemsControl.ItemTemplate>
-                            </ItemsControl>
-
-                            <ItemsControl  Grid.Row="0" Grid.Column="1" x:Name="nd2">
-                                <ItemsControl.ItemTemplate>
-                                    <DataTemplate>
-                                        <Button Style="{DynamicResource pp_ConnectItemsBts}" Content="{Binding NoteHeader}" Uid="{Binding NotesId}" Tag="ArrowRight" Click="noteDetailPopup_Click" />
-                                    </DataTemplate>
-                                </ItemsControl.ItemTemplate>
-                            </ItemsControl>
-
-                            <ItemsControl  Grid.Row="1" Grid.Column="0" x:Name="nd3">
-                                <ItemsControl.ItemTemplate>
-                                    <DataTemplate>
-                                        <Button Style="{DynamicResource pp_ConnectItemsBts}" Content="{Binding NoteHeader}" Uid="{Binding NotesId}" Tag="ArrowRight" Click="noteDetailPopup_Click" />
-                                    </DataTemplate>
-                                </ItemsControl.ItemTemplate>
-                            </ItemsControl>
-
-                            <ItemsControl  Grid.Row="1" Grid.Column="1" x:Name="nd4">
-                                <ItemsControl.ItemTemplate>
-                                    <DataTemplate>
-                                        <Button Style="{DynamicResource pp_ConnectItemsBts}" Content="{Binding NoteHeader}" Uid="{Binding NotesId}" Tag="ArrowRight" Click="noteDetailPopup_Click" />
-                                    </DataTemplate>
-                                </ItemsControl.ItemTemplate>
-                            </ItemsControl>
-
-                            <ItemsControl  Grid.Row="2" Grid.Column="0" x:Name="nd5">
-                                <ItemsControl.ItemTemplate>
-                                    <DataTemplate>
-                                        <Button Style="{DynamicResource pp_ConnectItemsBts}" Content="{Binding NoteHeader}" Uid="{Binding NotesId}" Tag="ArrowRight" Click="noteDetailPopup_Click" />
-                                    </DataTemplate>
-                                </ItemsControl.ItemTemplate>
-                            </ItemsControl>
-
-                            <ItemsControl  Grid.Row="2" Grid.Column="1" x:Name="nd6">
-                                <ItemsControl.ItemTemplate>
-                                    <DataTemplate>
-                                        <Button Style="{DynamicResource pp_ConnectItemsBts}" Content="{Binding NoteHeader}" Uid="{Binding NotesId}" Tag="ArrowRight" Click="noteDetailPopup_Click" />
-                                    </DataTemplate>
-                                </ItemsControl.ItemTemplate>
-                            </ItemsControl>
-
-                            <ItemsControl  Grid.Row="3" Grid.Column="0" x:Name="nd7">
-                                <ItemsControl.ItemTemplate>
-                                    <DataTemplate>
-                                        <Button Style="{DynamicResource pp_ConnectItemsBts}" Content="{Binding NoteHeader}" Uid="{Binding NotesId}" Tag="ArrowRight" Click="noteDetailPopup_Click" />
-                                    </DataTemplate>
-                                </ItemsControl.ItemTemplate>
-                            </ItemsControl>
+                            <Button Grid.Row="0" Grid.Column="0" x:Name="nd1" Style="{DynamicResource pp_ConnectItemsBts}"  Tag="ArrowRight" Click="noteDetailPopup_Click" />
+                            <Button Grid.Row="0" Grid.Column="1" x:Name="nd2" Style="{DynamicResource pp_ConnectItemsBts}"  Tag="ArrowRight" Click="noteDetailPopup_Click" />
+                            <Button Grid.Row="1" Grid.Column="0" x:Name="nd3" Style="{DynamicResource pp_ConnectItemsBts}"  Tag="ArrowRight" Click="noteDetailPopup_Click" />
+                            <Button Grid.Row="1" Grid.Column="1" x:Name="nd4" Style="{DynamicResource pp_ConnectItemsBts}"  Tag="ArrowRight" Click="noteDetailPopup_Click" />
+                            <Button Grid.Row="2" Grid.Column="0" x:Name="nd5" Style="{DynamicResource pp_ConnectItemsBts}"  Tag="ArrowRight" Click="noteDetailPopup_Click" />
+                            <Button Grid.Row="2" Grid.Column="1" x:Name="nd6" Style="{DynamicResource pp_ConnectItemsBts}"  Tag="ArrowRight" Click="noteDetailPopup_Click" />
+                            <Button Grid.Row="3" Grid.Column="0" x:Name="nd7" Style="{DynamicResource pp_ConnectItemsBts}"  Tag="ArrowRight" Click="noteDetailPopup_Click" />
 
                             <Button  x:Name="allShowNoteButton" Visibility="Hidden" Grid.Row="3" Grid.Column="1" Style="{DynamicResource pp_ConnectItemsBts}" Content="Hepsini Göster" Tag="ArrowRight" Click="allShowNoteButton_Click" />
 
@@ -283,9 +150,9 @@
         <!-- Note  -->
 
         <!-- Words -->
-        <Popup x:Name="popup_Words" IsOpen="False" Placement="Center" AllowsTransparency="True" Width="500" Height="600" VerticalAlignment="Center" HorizontalAlignment="Center" PopupAnimation="Fade">
+        <Popup x:Name="popup_Words" IsOpen="False" Placement="Center" AllowsTransparency="True" Width="940" Height="600" VerticalAlignment="Center" HorizontalAlignment="Center" PopupAnimation="Fade">
 
-            <Border Style="{DynamicResource defaultBorderShadowEffect}" Width="480" Height="580">
+            <Border Style="{DynamicResource defaultBorderShadowEffect}" Width="920" Height="580">
                 <Grid>
                     <Grid.RowDefinitions>
                         <RowDefinition Height="50" />
@@ -306,11 +173,19 @@
                                 <StackPanel x:Name="wordsAllShowPopupStackPanel">
                                     <StackPanel Orientation="Horizontal" x:Name="staticWordHeader">
                                         <StackPanel Margin="10 0 10 0">
-                                            <TextBlock  Style="{DynamicResource pp_wordHeader}" Text="KÖK" />
+                                            <TextBlock  Style="{DynamicResource pp_wordHeader}" Text="Arapça" />
                                             <Separator Style="{DynamicResource pp_dynamicItemShowSperator}" Width="200" />
                                         </StackPanel>
                                         <StackPanel Margin="10 0 10 0">
-                                            <TextBlock Style="{DynamicResource pp_wordHeader}" Text="ANLAMI" />
+                                            <TextBlock  Style="{DynamicResource pp_wordHeader}" Text="Türkçe" />
+                                            <Separator Style="{DynamicResource pp_dynamicItemShowSperator}" Width="200" />
+                                        </StackPanel>
+                                        <StackPanel Margin="10 0 10 0">
+                                            <TextBlock  Style="{DynamicResource pp_wordHeader}" Text="Kelime Meali" />
+                                            <Separator Style="{DynamicResource pp_dynamicItemShowSperator}" Width="200" />
+                                        </StackPanel>
+                                        <StackPanel Margin="10 0 10 0">
+                                            <TextBlock Style="{DynamicResource pp_wordHeader}" Text="Kök" />
                                             <Separator Style="{DynamicResource pp_dynamicItemShowSperator}" Width="200" />
                                         </StackPanel>
                                     </StackPanel>
@@ -319,13 +194,12 @@
                                 </StackPanel>
                             </ScrollViewer>
 
-                            <Button Grid.Column="1" Grid.Row="4" Style="{DynamicResource pp_DefaultButtonClosed}" Content="Kapat" Tag="CloseBig" Uid="popup_Words" Click="popupClosed_Click" />
+                            <Button Grid.Column="2" Grid.Row="4" Style="{DynamicResource pp_DefaultButtonClosed}" Content="Kapat" Tag="CloseBig" Uid="popup_Words" Click="popupClosed_Click" />
                         </Grid>
                     </Grid>
                 </Grid>
             </Border>
         </Popup>
-
         <!-- Words -->
 
         <!-- Popup -->
@@ -441,49 +315,10 @@
                                     <TextBlock Text="Yorumlayan" FontFamily="{DynamicResource PoppinsMedium}" FontSize="14" Foreground="#1C1E2F" HorizontalAlignment="Center" VerticalAlignment="Center" />
                                     <ComboBox x:Name="interpreterWriterCombo"  Style="{DynamicResource sr_NavCombobox}" SelectedIndex="0" Margin="10,0,0,0" SelectionChanged="interpreterWriterCombo_SelectionChanged">
                                         <ComboBoxItem  Content="Yorumcuyu Seçin" Uid="0" />
-                                        <ComboBoxItem  Content="Mehmet Okuyan" Uid="1" />
-                                        <ComboBoxItem  Content="Abdulbaki Gölpınarlı" Uid="2" />
-                                        <ComboBoxItem  Content="Abdullah Parlıyan" Uid="3" />
-                                        <ComboBoxItem  Content="Adem Uğur" Uid="3" />
-                                        <ComboBoxItem  Content="Ahmed Hulusi" />
-                                        <ComboBoxItem  Content="Ahmet Tekin" />
-                                        <ComboBoxItem  Content="Ahmet Varol" />
-                                        <ComboBoxItem  Content="Ali Bulaç" />
-                                        <ComboBoxItem  Content="Ali Fikri Yavuz" />
-                                        <ComboBoxItem  Content="Ali Ünal" />
-                                        <ComboBoxItem  Content="Bayraktar Bayraklı" />
-                                        <ComboBoxItem  Content="Bekir Sadak" />
-                                        <ComboBoxItem  Content="Celal Yıldırım" />
-                                        <ComboBoxItem  Content="Cemal Külünkoğlu" />
-                                        <ComboBoxItem  Content="Diyanet İşleri (eski)" />
-                                        <ComboBoxItem  Content="Diyanet Vakfi" />
-                                        <ComboBoxItem  Content="Edip Yüksel" />
-                                        <ComboBoxItem  Content="Elmalılı Hamdi Yazır" />
-                                        <ComboBoxItem  Content="Erhan Aktaş" />
-                                        <ComboBoxItem  Content="Gültekin Onan" />
-                                        <ComboBoxItem  Content="Hakkı Yılmaz" />
-                                        <ComboBoxItem  Content="Harun Yıldırım" />
-                                        <ComboBoxItem  Content="Hasan Basri Çantay" />
-                                        <ComboBoxItem  Content="Hayrat Neşriyat" />
-                                        <ComboBoxItem  Content="İbni Kesir" />
-                                        <ComboBoxItem  Content="İskender Evrenosoğlu" />
-                                        <ComboBoxItem  Content="İstanbul Kuran Araştırmaları Grubu" />
-                                        <ComboBoxItem  Content="Kadri Çelik" />
-                                        <ComboBoxItem  Content="Mehmet Ali Eroğlu" />
-                                        <ComboBoxItem  Content="Muhammed Celal Şems" />
-                                        <ComboBoxItem  Content="Muhammed Esed" />
-                                        <ComboBoxItem  Content="Mustafa Çevik" />
-                                        <ComboBoxItem  Content="Mustafa İslamoğlu" />
-                                        <ComboBoxItem  Content="Ömer Nasuhi Bilmen" />
-                                        <ComboBoxItem  Content="Ömer Öngüt" />
-                                        <ComboBoxItem  Content="Şaban Piriş" />
-                                        <ComboBoxItem  Content="Sadık Türkmen" />
-                                        <ComboBoxItem  Content="Seyyid Kutub" />
-                                        <ComboBoxItem  Content="Suat Yıldırım" />
-                                        <ComboBoxItem  Content="Süleyman Ateş" />
-                                        <ComboBoxItem  Content="Tefhim-ul Kuran" />
-                                        <ComboBoxItem  Content="Ümit Şimşek" />
-                                        <ComboBoxItem  Content="Yaşar Nuri Öztürk" />
+                                        <ComboBoxItem  Content="Yorumcu 1 Tr" Uid="1" Tag="Yorumcu 1" />
+                                        <ComboBoxItem  Content="Yorumcu 2 Eng" Uid="2" Tag="Yorumcu 2" />
+                                        <ComboBoxItem  Content="Yorumcu 3 Ger" Uid="3" Tag="Yorumcu 3" />
+                                        <ComboBoxItem  Content="Mehmet Okuyan" Uid="4" Tag="Mehmet Okuyan" />
                                     </ComboBox>
                                 </StackPanel>
 
