--- a/KuranX.App/Core/Pages/VerseF/verseStickFrame.xaml
+++ b/KuranX.App/Core/Pages/VerseF/verseStickFrame.xaml
@@ -92,9 +92,9 @@
 
             <!-- Words -->
 
-            <Popup x:Name="popup_Words" IsOpen="False" Placement="Center" AllowsTransparency="True" Width="500" Height="600" VerticalAlignment="Center" HorizontalAlignment="Center" PopupAnimation="Fade">
+            <Popup x:Name="popup_Words" IsOpen="False" Placement="Center" AllowsTransparency="True" Width="940" Height="600" VerticalAlignment="Center" HorizontalAlignment="Center" PopupAnimation="Fade">
 
-                <Border Style="{DynamicResource defaultBorderShadowEffect}" Width="480" Height="580">
+                <Border Style="{DynamicResource defaultBorderShadowEffect}" Width="920" Height="580">
                     <Grid>
                         <Grid.RowDefinitions>
                             <RowDefinition Height="50" />
@@ -115,11 +115,19 @@
                                     <StackPanel x:Name="wordsAllShowPopupStackPanel">
                                         <StackPanel Orientation="Horizontal" x:Name="staticWordHeader">
                                             <StackPanel Margin="10 0 10 0">
-                                                <TextBlock  Style="{DynamicResource pp_wordHeader}" Text="KÖK" />
+                                                <TextBlock  Style="{DynamicResource pp_wordHeader}" Text="Arapça" />
                                                 <Separator Style="{DynamicResource pp_dynamicItemShowSperator}" Width="200" />
                                             </StackPanel>
                                             <StackPanel Margin="10 0 10 0">
-                                                <TextBlock Style="{DynamicResource pp_wordHeader}" Text="ANLAMI" />
+                                                <TextBlock  Style="{DynamicResource pp_wordHeader}" Text="Türkçe" />
+                                                <Separator Style="{DynamicResource pp_dynamicItemShowSperator}" Width="200" />
+                                            </StackPanel>
+                                            <StackPanel Margin="10 0 10 0">
+                                                <TextBlock  Style="{DynamicResource pp_wordHeader}" Text="Kelime Meali" />
+                                                <Separator Style="{DynamicResource pp_dynamicItemShowSperator}" Width="200" />
+                                            </StackPanel>
+                                            <StackPanel Margin="10 0 10 0">
+                                                <TextBlock Style="{DynamicResource pp_wordHeader}" Text="Kök" />
                                                 <Separator Style="{DynamicResource pp_dynamicItemShowSperator}" Width="200" />
                                             </StackPanel>
                                         </StackPanel>
@@ -269,8 +277,9 @@
                                     <ComboBox x:Name="interpreterWriterCombo"  Style="{DynamicResource sr_NavCombobox}" SelectedIndex="0" Margin="10,0,0,0" SelectionChanged="interpreterWriterCombo_SelectionChanged">
                                         <ComboBoxItem  Content="Yorumcuyu Seçin" Uid="0" />
                                         <ComboBoxItem  Content="Yorumcu 1 Tr" Uid="1" Tag="Yorumcu 1" />
-                                        <ComboBoxItem  Content="Yorumcu 2 Tr" Uid="2" Tag="Yorumcu 2" />
-                                        <ComboBoxItem  Content="Yorumcu 3 Eng" Uid="3" Tag="Yorumcu 3" />
+                                        <ComboBoxItem  Content="Yorumcu 2 Eng" Uid="2" Tag="Yorumcu 2" />
+                                        <ComboBoxItem  Content="Yorumcu 3 Ger" Uid="3" Tag="Yorumcu 3" />
+                                        <ComboBoxItem  Content="Mehmet Okuyan" Uid="4" Tag="Mehmet Okuyan" />
                                     </ComboBox>
                                 </StackPanel>
 
